# rmesh

./: .buildinfo  .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  aftest.py  bigger_test.c  circular_mesh.py  err.h  first_test.c  genindex.html  geometry.h  index.html  io.c  io.h  main.c  mesh.c  mesh.h  mesh2d.c  mesh2d.h  newaf.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  sg_execution_times.html  show_bigger.py  show_mesh.py  test_extension.py  test_harder.py
.doctrees/: index.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: index.doctree  plot_circle.doctree  sg_execution_times.doctree
.doctrees/source/: blocks.doctree  mesh.doctree
.github/workflows/: cmake-single-platform.yml  documentation.yml
_downloads/f75d9ba9ec825da9834d350c71e0ab05/: plot_circle.ipynb
_modules/: index.html
_modules/rmsh/: geometry.html  mesh2d.html  meshblocks.html
_sources/: sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_circle.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  plot_circle.html  sg_execution_times.html
doc/: .gitignore  conf.py  index.rst
doc/source/: blocks.rst  mesh.rst
examples/: GALLERY_HEADER.rst  plot_circle.py
python/rmsh/: __init__.py  _geometry.py  _mesh2d.py  _meshblocks.py  _rmsh.pyi  geometry.py  mesh2d.py  meshblocks.py
rmsh/: _meshblocks.py  core.c  meshblocks.py
rmsh/geo/: __init__.py  geometry.py  meshblocks.py
source/: blocks.html  mesh.html
src/: core.c  defines.h  err.c  err.h  geometry.c  geometry.h  io.c  io.h  mesh2d.c  mesh2d.h
src/rmsh/: __init__.py  _geometry.py  _mesh2d.py  _meshblocks.py  _rmsh.pyi
tests/: adjacent_test.c  adjacent_test2.c  aftest.py  bigger_test.c  circular_mesh.py  first_test.c  newaf.py  test_extension.py  test_harder.py
