[build-system]
requires = ["scikit-build-core", "numpy>=2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.source-dir = "."
build.verbose = true
logging.level = "INFO"
editable.verbose = true
editable.rebuild = false
wheel.license-files = ["LICENSE.txt"]

[project]
name = "rmsh"
dependencies = ["numpy>=2"]
version = "0.0.1a2"
requires-python = ">=3.10"
authors = [{ name = "Jan Roth", email = "r0th.j4n@gmail.com" }]
description = "Rectangular mesh generator for semi-structured elliptical meshes."
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]


[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "npt-promote",
    "pytest",
    "pytest-cov",
    "interrogate",
    "nox",
    "pre-commit",
    "codespell",
    "tomli",
]
doc = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-favicon",
    "sphinx-design",
    "sphinx-gallery",
    "pypandoc",
    "pytest-sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-toolbox",
    "sphinxcontrib-websupport",
    "sphinxcontrib-asciinema",
    "jupyter-sphinx",
]

[tool.mypy]
# mypy_path = "python/rmsh"
plugins = ["npt_promote", "numpy.typing.mypy_plugin"]
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
strict_equality = true

[tool.codespell]
skip = "sandbox/*"
count = true

[tool.ruff]
exclude = [".venv", "sandbox", ".nox", ".pytest_cache", ".vscode", "doc"]
line-length = 90

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint]
select = ["E", "W", "D", "I", "F", "ARG", "A", "FA", "ICN", "TID"]
ignore = ["ARG002"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest]
exclude_also = ["if TYPE_CHECKING:", "@(abc\\.)?abstractmethod"]


[tool.pytest.ini_options]
addopts = "--doctest-modules -ra"
testpaths = ["tests", "python/rmsh"]
console_output_style = "count"

[tool.interrogate]
ignore-init-method = true
fail-under = 100
exclude = ["sandbox", "doc", "build", ".*/", "cmake-*/"]
style = "sphinx"
verbose = 1
